# ceres-raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  render.cpp  test.py
data/: asteroid.ini  bunny.ini  cornell_box.ini  crt.ini  crt.ply  example.ini  scene.yaml  shrek.ini  shrek.ply  sphere.ini  tv_atrrib.txt  uvsphere.ply
examples/: cornell_box.ini
include/: CMakeLists.txt  anim.cpp  brdfs.hpp  cameras.hpp  entity.hpp  lights.hpp  main.cpp  material.hpp  obj.hpp  ply.hpp  render.cpp  render.hpp  rotations.hpp  scene.hpp  static.cpp  transform.hpp
include/crt/: cameras.hpp
lib/: CMakeLists.txt  INIReader.h  obj.hpp  obj_norms.hpp  toml.hpp
lib/bvh/: triangle.hpp
src/: CMakeLists.txt  main.cpp  pybind.cpp
src/crt/: CMakeLists.txt  cameras.cpp  entity.hpp  render.hpp  scene.hpp  transform.hpp
src/crt/cameras/: CMakeLists.txt
src/crt/lighting/: CMakeLists.txt  lights.hpp
src/crt/materials/: material.hpp
src/crt/model_loaders/: CMakeLists.txt
src/crt/tools/: CMakeLists.txt
