add_executable(${PROJECT_NAME} main.cpp)

find_package(pybind11 CONFIG)
pybind11_add_module(ceres_rt pybind.cpp)

find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(${PROJECT_NAME} PRIVATE PUBLIC OpenMP::OpenMP_CXX lib bvh crt model_loaders materials)
    target_link_libraries(ceres_rt PRIVATE PUBLIC OpenMP::OpenMP_CXX lib bvh crt model_loaders materials)
else()
    target_link_libraries(${PROJECT_NAME} PRIVATE PUBLIC lib bvh crt model_loaders materials)
    target_link_libraries(ceres-rt PRIVATE PUBLIC lib bvh crt model_loaders materials)
endif()

include_directories(${CMAKE_SOURCE_DIR}/lib)
add_subdirectory(crt)